--- a/index.html
+++ b/index.html
@@ -344,23 +344,28 @@
                 </form>
             </div>
 
-            <div class="questions">
-                <h2>Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad aut rem unde nostrum porro natus
-                    reiciendis debitis ducimus molestias, repudiandae, rerum consequuntur labore ipsam quas?</p>
+            <div class="questionCards">
+
+                <div class="questions">
+                    <h2>Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad aut rem unde nostrum porro natus
+                        reiciendis debitis ducimus molestias, repudiandae, rerum consequuntur labore ipsam quas?</p>
+                </div>
+
+                <div class="questions">
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad aut rem unde nostrum porro natus
+                        reiciendis debitis ducimus molestias, repudiandae, rerum consequuntur labore ipsam quas?</p>
+                </div>
+
+                <div class="questions">
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad aut rem unde nostrum porro natus
+                        reiciendis debitis ducimus molestias, repudiandae, rerum consequuntur labore ipsam quas?</p>
+                </div>
+
             </div>
 
-            <div class="questions">
-                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad aut rem unde nostrum porro natus
-                    reiciendis debitis ducimus molestias, repudiandae, rerum consequuntur labore ipsam quas?</p>
-            </div>
-
-            <div class="questions">
-                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad aut rem unde nostrum porro natus
-                    reiciendis debitis ducimus molestias, repudiandae, rerum consequuntur labore ipsam quas?</p>
-            </div>
 
         </section>
 
