--- a/index.html
+++ b/index.html
@@ -366,6 +366,138 @@
 
             </div>
 
+        </section>
+
+        <section class="carFleet">
+
+            <div class="fleetSlide">
+                <div class="fleetSlideImage carImg1">
+                    <img src="IMAGES/BMWI7.jpg" alt="BMW I7">
+                </div>
+                <div class="carInfo">
+                    <h1 class="CarName">BMV I7</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate deserunt
+                        maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
+
+                    <div class="carSpecs">
+                        <p>Karosstyper: Sedan</p>
+                        <p>Säten: 4</p>
+                    </div>
+                </div>
+
+                <div class="carFleetButton">
+                    <ul>
+                        <li><a href="#">Läs Mer</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="fleetSlide">
+                <div class="fleetSlideImage carImg2">
+                    <img src="IMAGES/MercedesEQS.png" alt="Mercedes EQS">
+                </div>
+                <div class="carInfo">
+                    <h1 class="CarName">Mercedes-Benz EQS</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate deserunt
+                        maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
+
+                    <div class="carSpecs">
+                        <p>Karosstyper: Hatchback</p>
+                        <p>Säten: 4</p>
+                    </div>
+                </div>
+
+                <div class="carFleetButton">
+                    <ul>
+                        <li><a href="#">Läs Mer </a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="fleetSlide">
+                <div class="fleetSlideImage carImg3">
+                    <img src="IMAGES/MercedesEQV.jpeg" alt="Mercedes EQV">
+                </div>
+                <div class="carInfo">
+                    <h1 class="CarName">Mercedes-Benz Van EQV</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate deserunt
+                        maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
+
+                    <div class="carSpecs">
+                        <p>Karosstyper: Van</p>
+                        <p>Säten: 8</p>
+                    </div>
+                </div>
+
+                <div class="carFleetButton">
+                    <ul>
+                        <li><a href="#">Läs Mer </a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="fleetSlide">
+                <div class="fleetSlideImage carImg4">
+                    <img src="IMAGES/VolvoEM90.jpg" alt="Volvo EM90">
+                </div>
+                <div class="carInfo">
+                    <h1 class="CarName">Volvo EM90</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate deserunt
+                        maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
+                    <div class="carSpecs">
+                        <p>Karosstyper: SUV</p>
+                        <p>Säten: 6</p>
+                    </div>
+                </div>
+
+                <div class="carFleetButton">
+                    <ul>
+                        <li><a href="#">Läs Mer </a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="fleetSlide">
+                <div class="fleetSlideImage carImg5">
+                    <img src="IMAGES/VolvoEX90.jpeg" alt="Volvo EX90">
+                </div>
+                <div class="carInfo">
+                    <h1 class="CarName">Volvo EX90</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate deserunt
+                        maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
+                    <div class="carSpecs">
+                        <p>Karosstyper: SUV</p>
+                        <p>Säten: 7</p>
+                    </div>
+                </div>
+
+                <div class="carFleetButton">
+                    <ul>
+                        <li><a href="#">Läs Mer </a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="fleetSlide">
+                <div class="fleetSlideImage carImg6">
+                    <img src="IMAGES/RollsRoys.jpg" alt="Rolls Roys">
+                </div>
+                <div class="carInfo">
+                    <h1 class="CarName">The Rolls-Royce Spectre</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate deserunt
+                        maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
+                    <div class="carSpecs">
+                        <p>Karosstyper: 2-D Coupé</p>
+                        <p>Säten: 4</p>
+                    </div>
+                </div>
+
+                <div class="carFleetButton">
+                    <ul>
+                        <li><a href="#">Läs Mer </a></li>
+                    </ul>
+                </div>
+            </div>
 
         </section>
 
