--- a/index.html
+++ b/index.html
@@ -369,133 +369,159 @@
 
         <section class="carFleet">
 
-            <div class="fleetSlide">
-                <div class="fleetSlideImage carImg1">
-                    <img src="IMAGES/BMWI7.jpg" alt="BMW I7">
-                </div>
-                <div class="carInfo">
-                    <h1 class="CarName">BMV I7</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate deserunt
-                        maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
+            <div class="fleetSlideWrapper">
 
-                    <div class="carSpecs">
-                        <p>Karosstyper: Sedan</p>
-                        <p>Säten: 4</p>
+                <div class="fleetSlide" id="slide-1">
+                    <div class="fleetSlideImage carImg1">
+                        <img src="IMAGES/BMWI7.jpg" alt="BMW I7">
+                    </div>
+                    <div class="carInfo">
+                        <h1 class="CarName">BMV i7</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate
+                            deserunt
+                            maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
+
+                        <div class="carSpecs">
+                            <p>Karosstyper: Sedan</p>
+                            <p>Säten: 4</p>
+                        </div>
+
+                        <div class="carFleetButton">
+                            <ul>
+                                <li><a href="#">Läs Mer</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
-                <div class="carFleetButton">
-                    <ul>
-                        <li><a href="#">Läs Mer</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="fleetSlide">
-                <div class="fleetSlideImage carImg2">
-                    <img src="IMAGES/MercedesEQS.png" alt="Mercedes EQS">
-                </div>
-                <div class="carInfo">
-                    <h1 class="CarName">Mercedes-Benz EQS</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate deserunt
-                        maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
-
-                    <div class="carSpecs">
-                        <p>Karosstyper: Hatchback</p>
-                        <p>Säten: 4</p>
+                <div class="fleetSlide" id="slide-2">
+                    <div class="fleetSlideImage carImg2">
+                        <img src="IMAGES/MercedesEQS.png" alt="Mercedes EQS">
                     </div>
-                </div>
+                    <div class="carInfo">
+                        <h1 class="CarName">Mercedes-Benz EQS</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate
+                            deserunt
+                            maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
 
-                <div class="carFleetButton">
-                    <ul>
-                        <li><a href="#">Läs Mer </a></li>
-                    </ul>
-                </div>
-            </div>
+                        <div class="carSpecs">
+                            <p>Karosstyper: Hatchback</p>
+                            <p>Säten: 4</p>
+                        </div>
 
-            <div class="fleetSlide">
-                <div class="fleetSlideImage carImg3">
-                    <img src="IMAGES/MercedesEQV.jpeg" alt="Mercedes EQV">
-                </div>
-                <div class="carInfo">
-                    <h1 class="CarName">Mercedes-Benz Van EQV</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate deserunt
-                        maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
-
-                    <div class="carSpecs">
-                        <p>Karosstyper: Van</p>
-                        <p>Säten: 8</p>
+                        <div class="carFleetButton">
+                            <ul>
+                                <li><a href="#">Läs Mer </a></li>
+                            </ul>
+                        </div>
                     </div>
+
                 </div>
 
-                <div class="carFleetButton">
-                    <ul>
-                        <li><a href="#">Läs Mer </a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="fleetSlide">
-                <div class="fleetSlideImage carImg4">
-                    <img src="IMAGES/VolvoEM90.jpg" alt="Volvo EM90">
-                </div>
-                <div class="carInfo">
-                    <h1 class="CarName">Volvo EM90</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate deserunt
-                        maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
-                    <div class="carSpecs">
-                        <p>Karosstyper: SUV</p>
-                        <p>Säten: 6</p>
+                <div class="fleetSlide" id="slide-3">
+                    <div class="fleetSlideImage carImg3">
+                        <img src="IMAGES/MercedesEQV.jpeg" alt="Mercedes EQV">
                     </div>
-                </div>
+                    <div class="carInfo">
+                        <h1 class="CarName">Mercedes-Benz Van EQV</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate
+                            deserunt
+                            maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
 
-                <div class="carFleetButton">
-                    <ul>
-                        <li><a href="#">Läs Mer </a></li>
-                    </ul>
-                </div>
-            </div>
+                        <div class="carSpecs">
+                            <p>Karosstyper: Van</p>
+                            <p>Säten: 8</p>
+                        </div>
 
-            <div class="fleetSlide">
-                <div class="fleetSlideImage carImg5">
-                    <img src="IMAGES/VolvoEX90.jpeg" alt="Volvo EX90">
-                </div>
-                <div class="carInfo">
-                    <h1 class="CarName">Volvo EX90</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate deserunt
-                        maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
-                    <div class="carSpecs">
-                        <p>Karosstyper: SUV</p>
-                        <p>Säten: 7</p>
+                        <div class="carFleetButton">
+                            <ul>
+                                <li><a href="#">Läs Mer </a></li>
+                            </ul>
+                        </div>
                     </div>
+
                 </div>
 
-                <div class="carFleetButton">
-                    <ul>
-                        <li><a href="#">Läs Mer </a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="fleetSlide">
-                <div class="fleetSlideImage carImg6">
-                    <img src="IMAGES/RollsRoys.jpg" alt="Rolls Roys">
-                </div>
-                <div class="carInfo">
-                    <h1 class="CarName">The Rolls-Royce Spectre</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate deserunt
-                        maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
-                    <div class="carSpecs">
-                        <p>Karosstyper: 2-D Coupé</p>
-                        <p>Säten: 4</p>
+                <div class="fleetSlide" id="slide-4">
+                    <div class="fleetSlideImage carImg4">
+                        <img src="IMAGES/VolvoEM90.jpg" alt="Volvo EM90">
                     </div>
+                    <div class="carInfo">
+                        <h1 class="CarName">Volvo EM90</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate
+                            deserunt
+                            maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
+                        <div class="carSpecs">
+                            <p>Karosstyper: SUV</p>
+                            <p>Säten: 6</p>
+                        </div>
+
+                        <div class="carFleetButton">
+                            <ul>
+                                <li><a href="#">Läs Mer </a></li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
 
-                <div class="carFleetButton">
-                    <ul>
-                        <li><a href="#">Läs Mer </a></li>
-                    </ul>
+                <div class="fleetSlide" id="slide-5">
+                    <div class="fleetSlideImage carImg5">
+                        <img src="IMAGES/VolvoEX90.jpeg" alt="Volvo EX90">
+                    </div>
+                    <div class="carInfo">
+                        <h1 class="CarName">Volvo EX90</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate
+                            deserunt
+                            maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
+                        <div class="carSpecs">
+                            <p>Karosstyper: SUV</p>
+                            <p>Säten: 7</p>
+                        </div>
+
+                        <div class="carFleetButton">
+                            <ul>
+                                <li><a href="#">Läs Mer </a></li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
+
+                <div class="fleetSlide" id="slide-6">
+                    <div class="fleetSlideImage carImg6">
+                        <img src="IMAGES/RollsRoys.jpg" alt="Rolls Roys">
+                    </div>
+                    <div class="carInfo">
+                        <h1 class="CarName">The Rolls-Royce Spectre</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae ipsam cupiditate
+                            deserunt
+                            maxime magni cumque voluptas laboriosam necessitatibus distinctio.</p>
+                        <div class="carSpecs">
+                            <p>Karosstyper: 2-D Coupé</p>
+                            <p>Säten: 4</p>
+                        </div>
+
+                        <div class="carFleetButton">
+                            <ul>
+                                <li><a href="#">Läs Mer </a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="sliderNav">
+
+                    <a href="#slide-1"></a>
+                    <a href="#slide-2"></a>
+                    <a href="#slide-3"></a>
+                    <a href="#slide-4"></a>
+                    <a href="#slide-5"></a>
+                    <a href="#slide-6"></a>
+
+                </div>
+
             </div>
 
         </section>
