--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
             <div class="fleetSlideWrapper">
 
-                <div class="fleetSlide" id="slide-1">
+                <div class="fleetSlide carousel-slide" id="slide-1">
                     <div class="fleetSlideImage carImg1">
                         <img src="IMAGES/BMWI7.jpg" alt="BMW I7">
                     </div>
@@ -394,7 +394,7 @@
                     </div>
                 </div>
 
-                <div class="fleetSlide" id="slide-2">
+                <div class="fleetSlide carousel-slide" id="slide-2">
                     <div class="fleetSlideImage carImg2">
                         <img src="IMAGES/MercedesEQS.png" alt="Mercedes EQS">
                     </div>
@@ -418,7 +418,7 @@
 
                 </div>
 
-                <div class="fleetSlide" id="slide-3">
+                <div class="fleetSlide carousel-slide" id="slide-3">
                     <div class="fleetSlideImage carImg3">
                         <img src="IMAGES/MercedesEQV.jpeg" alt="Mercedes EQV">
                     </div>
@@ -442,7 +442,7 @@
 
                 </div>
 
-                <div class="fleetSlide" id="slide-4">
+                <div class="fleetSlide carousel-slide" id="slide-4">
                     <div class="fleetSlideImage carImg4">
                         <img src="IMAGES/VolvoEM90.jpg" alt="Volvo EM90">
                     </div>
@@ -465,7 +465,7 @@
 
                 </div>
 
-                <div class="fleetSlide" id="slide-5">
+                <div class="fleetSlide carousel-slide" id="slide-5">
                     <div class="fleetSlideImage carImg5">
                         <img src="IMAGES/VolvoEX90.jpeg" alt="Volvo EX90">
                     </div>
@@ -488,7 +488,7 @@
 
                 </div>
 
-                <div class="fleetSlide" id="slide-6">
+                <div class="fleetSlide carousel-slide" id="slide-6">
                     <div class="fleetSlideImage carImg6">
                         <img src="IMAGES/RollsRoys.jpg" alt="Rolls Roys">
                     </div>
@@ -512,14 +512,9 @@
                 </div>
 
                 <div class="sliderNav">
-
-                    <a href="#slide-1"></a>
-                    <a href="#slide-2"></a>
-                    <a href="#slide-3"></a>
-                    <a href="#slide-4"></a>
-                    <a href="#slide-5"></a>
-                    <a href="#slide-6"></a>
-
+                <button id="prevBtn">&lt;</button>
+                <button id="nextBtn">&gt;</button>
+                    <!-- Repeat for other slides -->
                 </div>
 
             </div>
