--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
 
             <div class="fleetSlideWrapper">
 
-                <div class="fleetSlide carousel-slide" id="slide-1">
-                    <div class="fleetSlideImage carImg1">
+                <div class="fleetSlide carousel-slide">
+                    <div class="fleetSlideImage">
                         <img src="IMAGES/BMWI7.jpg" alt="BMW I7">
                     </div>
                     <div class="carInfo">
@@ -394,8 +394,8 @@
                     </div>
                 </div>
 
-                <div class="fleetSlide carousel-slide" id="slide-2">
-                    <div class="fleetSlideImage carImg2">
+                <div class="fleetSlide carousel-slide">
+                    <div class="fleetSlideImage">
                         <img src="IMAGES/MercedesEQS.png" alt="Mercedes EQS">
                     </div>
                     <div class="carInfo">
@@ -411,15 +411,15 @@
 
                         <div class="carFleetButton">
                             <ul>
-                                <li><a href="#">Läs Mer </a></li>
+                                <li><a href="#">Läs Mer</a></li>
                             </ul>
                         </div>
                     </div>
 
                 </div>
 
-                <div class="fleetSlide carousel-slide" id="slide-3">
-                    <div class="fleetSlideImage carImg3">
+                <div class="fleetSlide carousel-slide">
+                    <div class="fleetSlideImage">
                         <img src="IMAGES/MercedesEQV.jpeg" alt="Mercedes EQV">
                     </div>
                     <div class="carInfo">
@@ -435,15 +435,15 @@
 
                         <div class="carFleetButton">
                             <ul>
-                                <li><a href="#">Läs Mer </a></li>
+                                <li><a href="#">Läs Mer</a></li>
                             </ul>
                         </div>
                     </div>
 
                 </div>
 
-                <div class="fleetSlide carousel-slide" id="slide-4">
-                    <div class="fleetSlideImage carImg4">
+                <div class="fleetSlide carousel-slide">
+                    <div class="fleetSlideImage">
                         <img src="IMAGES/VolvoEM90.jpg" alt="Volvo EM90">
                     </div>
                     <div class="carInfo">
@@ -458,15 +458,15 @@
 
                         <div class="carFleetButton">
                             <ul>
-                                <li><a href="#">Läs Mer </a></li>
+                                <li><a href="#">Läs Mer</a></li>
                             </ul>
                         </div>
                     </div>
 
                 </div>
 
-                <div class="fleetSlide carousel-slide" id="slide-5">
-                    <div class="fleetSlideImage carImg5">
+                <div class="fleetSlide carousel-slide">
+                    <div class="fleetSlideImage">
                         <img src="IMAGES/VolvoEX90.jpeg" alt="Volvo EX90">
                     </div>
                     <div class="carInfo">
@@ -481,15 +481,15 @@
 
                         <div class="carFleetButton">
                             <ul>
-                                <li><a href="#">Läs Mer </a></li>
+                                <li><a href="#">Läs Mer</a></li>
                             </ul>
                         </div>
                     </div>
 
                 </div>
 
-                <div class="fleetSlide carousel-slide" id="slide-6">
-                    <div class="fleetSlideImage carImg6">
+                <div class="fleetSlide carousel-slide">
+                    <div class="fleetSlideImage">
                         <img src="IMAGES/RollsRoys.jpg" alt="Rolls Roys">
                     </div>
                     <div class="carInfo">
@@ -504,19 +504,17 @@
 
                         <div class="carFleetButton">
                             <ul>
-                                <li><a href="#">Läs Mer </a></li>
+                                <li><a href="#">Läs Mer</a></li>
                             </ul>
                         </div>
                     </div>
 
                 </div>
+            </div>
 
-                <div class="sliderNav">
-                <button id="prevBtn">&lt;</button>
-                <button id="nextBtn">&gt;</button>
-                    <!-- Repeat for other slides -->
-                </div>
-
+            <div class="carFleetNavBtn">
+                <a class="prevCarfleetBtn" onclick="plusSlides(-1); stopAutoPlay()">❮</a>
+                <a class="nextCarFleetbtn" onclick="plusSlides(1); stopAutoPlay()">❯</a>
             </div>
 
         </section>
