--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                         <img src="IMAGES/BMWI7.jpg" alt="BMW I7">
                     </div>
                     <div class="carInfo">
-                        <h1 class="CarName">BMV i7</h1>
+                        <h1 class="CarName">BMW i7</h1>
                         <p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
                             officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>
 
@@ -440,7 +440,7 @@
 
                 <div class="fleetSlide carousel-slide">
                     <div class="fleetSlideImage">
-                        <img src="IMAGES/MercedesEQS.png" alt="Mercedes EQS">
+                        <img src="IMAGES/MercedesEQS.jpg" alt="Mercedes EQS">
                     </div>
                     <div class="carInfo">
                         <h1 class="CarName">Mercedes-Benz EQS</h1>
@@ -641,7 +641,7 @@
 
                 <div class="fleetSlide carousel-slide">
                     <div class="fleetSlideImage">
-                        <img src="IMAGES/VolvoEX90.jpeg" alt="Volvo EX90">
+                        <img src="IMAGES/VolvoEX90.png" alt="Volvo EX90">
                     </div>
                     <div class="carInfo">
                         <h1 class="CarName">Volvo EX90</h1>
