Contact Right side

--- a/index.html
+++ b/index.html
@@ -781,6 +781,86 @@
 
         </section>
 
+        <section class="mapForContact"></section>
+        <div class="contactMap">
+            <img src="IMAGES/ContactMap.png" alt="Contact Map">
+        </div>
+
+        <section class="contact">
+
+
+            <h1>Hör av dig vid frågor och funderingar</h1>
+
+            <div class="contactContainer">
+
+                <div class="contactLeft">
+
+                    <div class="addressRow">
+                        <h1>Vikingavägen 28</h1>
+                    </div>
+                    <div class="addressRow">
+                        <p>136 46</p>
+                    </div>
+                    <div class="addressRow">
+                        <p>Handen, Stockholm</p>
+                    </div>
+                    <div class="addressRow">
+                        <p>Sverige</p>
+                    </div>
+
+                    <div class="addressRow">
+                        <p>limoviainfo@sweden.se</p>
+                    </div>
+                    <div class="addressRow">
+                        <p>08 777 83 47</p>
+                    </div>
+
+                </div>
+
+                <div class="contactRight">
+
+                    <form>
+
+                        <div class="contactInputRow">
+                            <div class="contactInputGroup">
+                                <input type="text" placeholder="Namn" name="namn" required autocomplete="off">
+                            </div>
+
+                            <div class="contactInputGroup">
+                                <input type="text" placeholder="Efternamn" name="efternamn" required autocomplete="off">
+                            </div>
+                        </div>
+
+                        <div class="contactInputRow">
+                            <div class="contactInputGroup">
+                                <input type="email" placeholder="Email" name="email" required autocomplete="off">
+
+                            </div>
+
+                            <div class="contactInputGroup">
+                                <input type="number" placeholder="Telefon Nr" name="telefonNr" required
+                                    autocomplete="off">
+                            </div>
+                        </div>
+
+                        <div class="contactInputGroup">
+                            <input type="message" placeholder="Ämne" name="ämne" required autocomplete="off">
+                        </div>
+
+                        <div class="contactInputGroup">
+                            <textarea name="message" id="messade" rows="5" placeholder="Meddelande" required></textarea>
+                        </div>
+
+                        <div class="contactInputGroup">
+                            <button type="submit">Skicka</i></i></button>
+                        </div>
+
+                    </form>
+
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
