--- a/index.html
+++ b/index.html
@@ -788,9 +788,10 @@
 
         <section class="contact">
 
-
-            <h1>Hör av dig vid frågor och funderingar</h1>
-
+            <div class="contactTitle">
+                <h1>Hör av dig vid frågor och funderingar!</h1>
+            </div>
+            
             <div class="contactContainer">
 
                 <div class="contactLeft">
@@ -819,6 +820,11 @@
 
                 <div class="contactRight">
 
+                    <div class="contactRightText">
+                        <p>Använd formuläret nedan för att kontakta oss om du vill veta mer om TheCar. Eller ring oss på
+                            08 777 83 47.</p>
+                    </div>
+
                     <form>
 
                         <div class="contactInputRow">
@@ -838,7 +844,7 @@
                             </div>
 
                             <div class="contactInputGroup">
-                                <input type="number" placeholder="Telefon Nr" name="telefonNr" required
+                                <input type="number" placeholder="Telefonnummer" name="telefonNr" required
                                     autocomplete="off">
                             </div>
                         </div>
