--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
             <div class="contactTitle">
                 <h1>Hör av dig vid frågor och funderingar!</h1>
             </div>
-            
+
             <div class="contactContainer">
 
                 <div class="contactLeft">
@@ -800,15 +800,8 @@
                         <h1>Vikingavägen 28</h1>
                     </div>
                     <div class="addressRow">
-                        <p>136 46</p>
+                        <p>136 46, Stockholm, Sverige</p>
                     </div>
-                    <div class="addressRow">
-                        <p>Handen, Stockholm</p>
-                    </div>
-                    <div class="addressRow">
-                        <p>Sverige</p>
-                    </div>
-
                     <div class="addressRow">
                         <p>limoviainfo@sweden.se</p>
                     </div>
