--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 </div>
                 <hr class="numberShowHR">
                 <div class="numberCard">
-                    <p class="numberShowNumber">14</p>
-                    <p class="numberShowText">Olika kommuner</p>
+                    <p class="numberShowNumber">12</p>
+                    <p class="numberShowText">Olika Regioner</p>
                 </div>
                 <hr class="numberShowHR">
                 <div class="numberCard">
@@ -796,7 +796,7 @@
 
                 <div class="contactLeft">
 
-                    <div class="addressRow">
+                    <!--<div class="addressRow">
                         <h1>Vikingavägen 28</h1>
                     </div>
                     <div class="addressRow">
@@ -807,6 +807,42 @@
                     </div>
                     <div class="addressRow">
                         <p>08 777 83 47</p>
+                    </div>-->
+
+                    <div class="profile">
+                        <figure>
+                            <img src="IMAGES/ManProfile.jpg" alt="Man profile">
+                            <figcaption class="figcaptionOne">Marcel Fontaine</figcaption>
+                            <figcaption class="figcaptionTwo">Verkställande Direktör</figcaption>
+                            <figcaption class="figcaptionThree">marcel.fontaine@limovia.se</figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="profile">
+                        <figure>
+                            <img src="IMAGES/WomenProfile.png" alt="Woman Profile">
+                            <figcaption class="figcaptionOne">Mia Tussaud</figcaption>
+                            <figcaption class="figcaptionTwo">Försäljningsansvarig</figcaption>
+                            <figcaption class="figcaptionThree">mia.tussaud@limovia.se</figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="profile">
+                        <figure>
+                            <img src="IMAGES/WomenProfile.png" alt="Woman Profile">
+                            <figcaption class="figcaptionOne">Céline Chapelle</figcaption>
+                            <figcaption class="figcaptionTwo">Verksamhetschef - Region Stockholm / Västerås</figcaption>
+                            <figcaption class="figcaptionThree">celine.chapelle@limovia.se</figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="profile">
+                        <figure>
+                            <img src="IMAGES/ManProfile.jpg" alt="Man Profile">
+                            <figcaption class="figcaptionOne">Raphaël Dumas</figcaption>
+                            <figcaption class="figcaptionTwo">Verksamhetschef - Region Väst / Sydost</figcaption>
+                            <figcaption class="figcaptionThree">raphael.dumas@limovia.se</figcaption>
+                        </figure>
                     </div>
 
                 </div>
